--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   
@@ -19,7 +22,7 @@
       <li class="values">7</li>
       <li class="values">8</li>
       <li class="values">9</li>
-      <li class="values">/</li>
+      <li class="values">/</i>
       <li class="values">4</li>
       <li class="values">5</li>
       <li class="values">6</li>
@@ -27,11 +30,11 @@
       <li class="values">1</li>
       <li class="values">2</li>
       <li class="values">3</li>
-      <li class="values">-</li>
+      <li class="values">-</i>
       <li class="values">.</li>
       <li class="values">0</li>
-      <li class="values">=</li>
-      <li class="values">+</li>
+      <li class="values equal">=</li>
+      <li class="values">+</i>
     </ul>
   </div>
 
